--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "examples": "x0 examples"
+    "examples": "x0 examples",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@compositor/x0": "^5.0.4",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-emotion": "^9.1.2",
+    "@compositor/x0": "^6.0.7",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "babel-plugin-emotion": "^10.0.7",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.9.1"
+    "cypress": "^3.1.5",
+    "eslint": "^5.14.1",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.1.0"
   },
   "dependencies": {
-    "memoize-one": "^3.1.1",
-    "mitt": "^1.1.3",
-    "react": "^16.4.0"
+    "@emotion/core": "^10.0.7",
+    "memoize-one": "^5.0.0",
+    "react": "^16.8.3"
   }
 }
