--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
