--- a/package.json
+++ b/package.json
@@ -28,54 +28,46 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,jsx,ts,tsx,md}": "prettier --write"
   },
   "scripts": {
-    "build": "tsc && rollup -c",
+    "build": "microbundle build --jsx React.createElement",
     "ci": "npm run test:e2e:ci",
-    "dev": "cross-env NODE_ENV=dev next dev",
-    "prebuild": "rimraf compiled dist",
+    "dev": "cross-env NODE_ENV=development next dev",
+    "prebuild": "rimraf dist",
     "prepublishOnly": "npm run test && npm run build",
     "test": "npm run test:e2e",
     "test:e2e": "start-server-and-test dev \"http://localhost:3000/list|http://localhost:3000/disabled\" test:jest:e2e",
     "test:e2e:ci": "start-server-and-test dev \"http://localhost:3000/list|http://localhost:3000/disabled\" test:jest:e2e:ci",
     "test:jest:e2e": "jest -c jest.config.e2e.js",
     "test:jest:e2e:ci": "cross-env CI=true jest -c jest.config.e2e.js --runInBand",
-    "typecheck": "tsc"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.11",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.13",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.3",
-    "@zeit/next-typescript": "^1.1.1",
-    "babel-jest": "^24.5.0",
-    "cross-env": "^5.2.0",
-    "husky": "^1.3.1",
-    "jest": "^24.5.0",
-    "jest-puppeteer": "^4.1.0",
-    "lint-staged": "^8.1.5",
-    "next": "^8.0.3",
-    "prettier": "^1.16.4",
-    "puppeteer": "^1.13.0",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.7.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "start-server-and-test": "^1.7.12",
-    "typescript": "^3.3.4000"
+    "@types/react": "^16.9.49",
+    "babel-jest": "^26.3.0",
+    "cross-env": "^7.0.2",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-puppeteer": "^4.4.0",
+    "lint-staged": "^10.3.0",
+    "microbundle": "^0.12.3",
+    "next": "^9.5.3",
+    "prettier": "^2.1.1",
+    "puppeteer": "^5.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rimraf": "^3.0.2",
+    "start-server-and-test": "^1.11.3",
+    "typescript": "^4.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
