--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-peekaboo",
-  "description": "React component that notifies when its child enters or exits the viewport",
+  "description": "React hooks for monitoring an element's intersection with the viewport",
   "version": "0.3.0",
   "license": "MIT",
   "author": "Wyatt Johnston <w@wyatt.page>",
@@ -32,15 +32,9 @@
   },
   "scripts": {
     "build": "microbundle build --jsx React.createElement",
-    "ci": "npm run test:e2e:ci",
     "dev": "cross-env NODE_ENV=development next dev",
     "prebuild": "rimraf dist",
-    "prepublishOnly": "npm run test && npm run build",
-    "test": "npm run test:e2e",
-    "test:e2e": "start-server-and-test dev \"http://localhost:3000/list|http://localhost:3000/disabled\" test:jest:e2e",
-    "test:e2e:ci": "start-server-and-test dev \"http://localhost:3000/list|http://localhost:3000/disabled\" test:jest:e2e:ci",
-    "test:jest:e2e": "jest -c jest.config.e2e.js",
-    "test:jest:e2e:ci": "cross-env CI=true jest -c jest.config.e2e.js --runInBand",
+    "test": "jest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
@@ -50,6 +44,8 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
     "@types/jest": "^26.0.13",
     "@types/lodash.throttle": "^4.1.6",
     "@types/react": "^16.9.49",
@@ -57,20 +53,16 @@
     "cross-env": "^7.0.2",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
-    "jest-puppeteer": "^4.4.0",
     "lint-staged": "^10.3.0",
     "microbundle": "^0.12.3",
-    "next": "^9.5.3",
     "prettier": "^2.1.1",
-    "puppeteer": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "start-server-and-test": "^1.11.3",
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
+    "dom-peekaboo": "^0.1.0",
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
